--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ img {
 
 .intro-grid {
     display: grid;
-    grid-template-columns: 1fr, 1fr, 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     gap: 1.5rem;
     padding: 0 1.5rem 2rem;
 }
@@ -124,7 +124,7 @@ img {
 
 .flavors-grid {
     display: grid;
-    grid-template-columns: 1fr, 1fr, 1fr, 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 1.5rem;
     padding: 0 1.5rem 2.5rem;
 }
@@ -249,12 +249,12 @@ fieldset label {
     }
 
     .flavors-grid {
-        grid-template-columns: 1fr, 1fr;
+        grid-template-columns: 1fr 1fr;
     }
 
 
     .intro-grid {
-        grid-template-columns: 1fr, 1fr;
+        grid-template-columns: 1fr 1fr;
     }
 }
 
